--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,5 +1,11 @@
 version: '3.7'
 services:
+  proxy:
+    image: nginx:alpine
+    ports:
+      - 80:80
+    volumes:
+      - "./nginx.conf:/etc/nginx/conf.d/default.conf:ro"
   backend:
     image: marco79423/urmart-backend:latest
     command: gunicorn backend.wsgi:application -b :8000
