Build backend only if the associated code change

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,10 @@ stages:
 
 build-backend:
   stage: build
+  only:
+    changes:
+      - backend/**/*
+      - deploy/**/*
   before_script:
     - docker --version
     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
