--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -1,3 +1,7 @@
+upstream frontend {
+  server frontend:3000 fail_timeout=5s max_fails=5;
+}
+
 upstream backend {
   server backend:8000 fail_timeout=5s max_fails=5;
 }
@@ -25,6 +29,11 @@ server {
 
   root /static;
 
+  location / {
+    # checks for static file, if not found proxy to app
+    try_files $uri @proxy_to_frontend;
+  }
+
   location ~ /apis/ {
     expires 1d;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -37,5 +46,29 @@ server {
     # redirects, we set the Host: header above already.
     proxy_redirect off;
     proxy_pass http://backend;
+  }
+
+  location @proxy_to_frontend {
+    expires 7d;
+
+    # an HTTP header important enough to have its own Wikipedia entry:
+    #   http://en.wikipedia.org/wiki/X-Forwarded-For
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+    # enable this if and only if you use HTTPS, this helps Rack
+    # set the proper protocol for doing redirects:
+    proxy_set_header X-Forwarded-Proto https;
+
+    # pass the Host: header from the client right along so redirects
+    # can be set properly within the Rack application
+    proxy_set_header Host $http_host;
+
+    # we don't want nginx trying to do something clever with
+    # redirects, we set the Host: header above already.
+    proxy_redirect off;
+
+    # Try to serve static files from nginx, no point in making an
+    # *application* server like Unicorn/Rainbows! serve static files.
+    proxy_pass http://frontend;
   }
 }
