--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,5 +40,11 @@
     "cross-env": "^6.0.3",
     "react-test-renderer": "^16.12.0",
     "redux-mock-store": "^1.5.4"
+  },
+  "jest": {
+    "coverageReporters": [
+      "text",
+      "text-summary"
+    ]
   }
 }
